refactor(launcher): retire the SmartyCraft raw server-list path
SmartyCraft arrives as mirror packs now, so the second install-sync-launch
mechanism was duplicating the pack path with weaker guarantees: no manifest
snapshot on the instance, no compat grading, and no roster the launch holds
the contents to. Gone with it: SmartyCraftServerListService,
ServerListCacheStore, FileDownloadService, AutoSyncService, ManifestCache,
ManifestProcessorService, ProfileManager, SmartyModPlanner,
OpenSmrtHelperResolver, ModInjector, ClasspathProvider,
NeoForgeVersionDetector, ClientSyncCoordinator, ClientRootDirs and
ServerNameValidator, the contracts IFileDownloadService,
IManifestProcessorService, IInstanceProfileStore, IManifestStore and
IServerListService, the models ServerProfile, ServerSource, DashboardData,
SyncProgress and SmartyResponse, the ServerRepository adapter, and the
ILauncherService.launchClient / launchClientWithLogs pair.

SmartyCraft authentication, its second-factor gate, the authlib-redirect
agent and the SC authlib swap stay: those belong to the account, not to the
retired transport. The spawn-point reset goes, because the screen that
offered it does; the upstream action stays documented in the protocol
reference, since it is SmartyCraft's API and not ours.

The screens that fronted the path go with it -- the classic home, server
details, server settings, the launch panel and the server cards -- and so
does the home-view setting, since there is one home to choose from. Layout
schema 11 -> 12 drops both retired surfaces from a saved graph and reaps the
five retired widget kinds wherever they sit, including inside a container's
child slots. The kinds are reaped in the JSON ladder rather than left to the
registry-aware pass: that one runs only after a schema bump and only on the
layout file, so a preset carrying a retired kind would write it into a graph
that is already current, where nothing could ever reap it.

Three things the removal broke and had to be pu